# $Id$

lib_LTLIBRARIES = libbutton.la
libbutton_la_SOURCES = buttmis.f button.f buttqbr.f buttqcf.f buttqch.f\
 buttqex.f buttqit.f buttqpr.f buttqxb.f buttqyb.f buttqytext.f buttsbr.f \
 buttscf.f buttsch.f buttsex.f buttsit.f buttspr.f buttsxb.f \
 buttsyb.f buttsytext.f ifbutton.f rpgband.f rpgbegin.f rpgbegok.f \
 rpgenv.f rpgeras.f rpgerasb.f rpgerasw.f button.inc

noinst_PROGRAMS = sample
sample_SOURCES = sample.f
sample_LDADD = libbutton.la
