#
lib_LTLIBRARIES = libbutton.la
libbutton_la_SOURCES = buttmis.f button.f buttqbr.f buttqcf.f buttqch.f\
 buttqex.f buttqit.f buttqpr.f buttqxb.f buttqyb.f buttqytext.f buttsbr.f \
 buttscf.f buttsch.f buttsex.f buttsit.f buttspr.f buttsxb.f \
 buttsyb.f buttsytext.f chupper.f ifbutton.f read2i.f readc.f readi.f \
 readilim.f readf.f rmblank.f rpgband.f rpgbegin.f rpgbegok.f \
 rpgenv.f rpgeras.f rpgerasb.f rpgerasw.f truebeg.f truelen.f button.inc

bin_PROGRAMS = samplebutton
samplebutton_SOURCES = samplebutton.f
samplebutton_LDADD = libbutton.la
