#
lib_LTLIBRARIES = libbutton.la
libbutton_la_SOURCES = button.f90 buttqbr.f90 buttqcf.f90 buttqch.f90 \
 buttqex.f90 buttqit.f90 buttqpr.f90 buttqxb.f90 buttqyb.f90 buttqytext.f90 \
 buttsbr.f90 buttscf.f90 buttsch.f90 buttsex.f90 buttsit.f90 buttspr.f90 \
 buttsxb.f90 buttsyb.f90 buttsytext.f90 ifbutton.f90 read2i.f90 readc.f90 \
 readi.f90 readilim.f90 readf.f90 rmblank.f90 rpgband.f90 rpgbegin.f90 \
 rpgbegok.f90 rpgenv.f90 rpgeras.f90 rpgerasb.f90 rpgerasw.f90 truebeg.f90 \
 truelen.f90 button.inc

bin_PROGRAMS = samplebutton logo
samplebutton_SOURCES = samplebutton.f90
samplebutton_LDADD = libbutton.la
logo_SOURCES = logo.f90
logo_LDADD = libbutton.la
